--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint": "eslint src --ext .ts",
-    "typecheck": "tsc --noEmit"
+    "lint:fix": "eslint src --ext .ts --fix",
+    "format": "prettier --write \"src/**/*.{ts,json}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,json}\"",
+    "typecheck": "tsc --noEmit",
+    "check": "npm run typecheck && npm run lint && npm run format:check"
   },
   "keywords": [
     "api",
@@ -43,8 +47,13 @@
     "@typescript-eslint/parser": "^6.19.1",
     "cross-env": "^10.1.0",
     "eslint": "^8.56.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.4",
     "jest": "^29.7.0",
     "nodemon": "^3.1.11",
+    "prettier": "^3.7.4",
     "ts-jest": "^29.1.1",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
