Update ESLint configuration to disable no-unsafe-call rule and enhance app error handling by adding request logger and 404 handler in app.ts.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -53,6 +53,7 @@
       }
     ],
     "@typescript-eslint/require-await": "warn",
+    "@typescript-eslint/no-unsafe-call": "off",
     "import/order": [
       "error",
       {
