--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "format": "prettier --write \"src/**/*.{ts,json}\"",
     "format:check": "prettier --check \"src/**/*.{ts,json}\"",
     "typecheck": "tsc --noEmit",
-    "check": "npm run typecheck && npm run lint && npm run format:check"
+    "check": "yarn typecheck && yarn lint && yarn format:check",
+    "prepare": "husky",
+    "commitlint": "commitlint --edit"
   },
   "keywords": [
     "api",
@@ -40,6 +42,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.2.0",
+    "@commitlint/config-conventional": "^20.2.0",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.5",
     "@types/pg": "^8.10.9",
@@ -51,6 +55,7 @@
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "nodemon": "^3.1.11",
     "prettier": "^3.7.4",
