refactor(app-acrchitecture): implement Dependency Injection, replacing PostgreSQL and Redis clients with a DependencyContaine

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -112,6 +112,6 @@
       }
     ]
   },
-  "ignorePatterns": ["dist/", "node_modules/", "*.js", "coverage/"]
+  "ignorePatterns": ["dist/", "node_modules/", "*.js", "coverage/", "**/*.test.ts", "**/*.spec.ts"]
 }
 
