--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
     "start": "cross-env APP_ENV=production node dist/index.js",
     "start:dev": "cross-env APP_ENV=development node dist/index.js",
     "test": "jest",
+    "test:unit": "jest __tests__/unit",
+    "test:e2e": "jest __tests__/e2e",
     "test:watch": "jest --watch",
+    "test:watch:unit": "jest __tests__/unit --watch",
+    "test:watch:e2e": "jest __tests__/e2e --watch",
     "test:coverage": "jest --coverage",
+    "test:coverage:unit": "jest __tests__/unit --coverage",
+    "test:coverage:e2e": "jest __tests__/e2e --coverage",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --write \"src/**/*.{ts,json}\"",
