feat(env): add CORS_ORIGIN variable environment files; add Prettier configuration file for code formatting

--- a/.env.prod.example
+++ b/.env.prod.example
@@ -2,6 +2,7 @@
 NODE_ENV=production
 PORT=3000
 HOST=0.0.0.0
+CORS_ORIGIN=*
 
 # PostgreSQL - Production (set your production database URL)
 DATABASE_URL=postgresql://user:password@host:5432/database
