--- a/.env.dev.example
+++ b/.env.dev.example
@@ -2,6 +2,7 @@
 NODE_ENV=development
 PORT=3000
 HOST=0.0.0.0
+CORS_ORIGIN=*
 
 # PostgreSQL - Local Development
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/bobs_corn_db
